==> c-jimmy886/stm32code/个人测试代码/AT32抬升 - 副本/SYSTEM/usart/usart.c <==
#include "sys.h"
#include "usart.h"	
////////////////////////////////////////////////////////////////////////////////// 	 
//如果使用ucos,则包括下面的头文件即可.
#if SYSTEM_SUPPORT_OS
#include "FreeRTOS.h"					//FreeRTOS使用	  
#endif
//////////////////////////////////////////////////////////////////////////////////	 
//本程序只供学习使用，未经作者许可，不得用于其它任何用途
//ALIENTEK STM32F4探索者开发板
//串口1初始化		   
//正点原子@ALIENTEK
//技术论坛:www.openedv.com
//修改日期:2014/6/10
//版本：V1.5
//版权所有，盗版必究。
//Copyright(C) 广州市星翼电子科技有限公司 2009-2019
//All rights reserved
//********************************************************************************
//V1.3修改说明 
//支持适应不同频率下的串口波特率设置.
//加入了对printf的支持
//增加了串口接收命令功能.
//修正了printf第一个字符丢失的bug
//V1.4修改说明
//1,修改串口初始化IO的bug
//2,修改了USART_RX_STA,使得串口最大接收字节数为2的14次方
//3,增加了USART_REC_LEN,用于定义串口最大允许接收的字节数(不大于2的14次方)
//4,修改了EN_USART1_RX的使能方式
//V1.5修改说明
//1,增加了对UCOSII的支持
////////////////////////////////////////////////////////////////////////////////// 	  
#include<dma_usart.h>

//////////////////////////////////////////////////////////////////
//加入以下代码,支持printf函数,而不需要选择use MicroLIB	  
#if 1
#pragma import(__use_no_semihosting)             
//标准库需要的支持函数                 
struct __FILE 
{ 
	int handle; 
}; 

FILE __stdout;       
//定义_sys_exit()以避免使用半主机模式    
void _sys_exit(int x) 
{ 
	x = x; 
} 
//重定义fputc函数 
int fputc(int ch, FILE *f)
{ 	
	while((USART1->sts&0X40)==0);//循环发送,直到发送完毕   
	USART1->dt = (u8) ch;      
	return ch;
}
#endif
 

//串口1中断服务程序
//注意,读取USARTx->SR能避免莫名其妙的错误   	
u8 USART_RX_BUF[USART_REC_LEN];     //接收缓冲,最大USART_REC_LEN个字节.
//接收状态
//bit15，	接收完成标志
//bit14，	接收到0x0d
//bit13~0，	接收到的有效字节数目
u16 USART_RX_STA=0;       //接收状态标记	

//初始化IO 串口1 
//bound:波特率
void uart_init(u32 bound){
		gpio_init_type gpio_init_struct;

	#if defined (__GNUC__) && !defined (__clang__)
	setvbuf(stdout, NULL, _IONBF, 0);
	#endif

	/* 开启时钟 */
	crm_periph_clock_enable(CRM_USART1_PERIPH_CLOCK, TRUE);
	
	crm_periph_clock_enable(CRM_GPIOA_PERIPH_CLOCK, TRUE);
	gpio_default_para_init(&gpio_init_struct);
	/* 初始化发送GPIO */
	gpio_init_struct.gpio_drive_strength = GPIO_DRIVE_STRENGTH_STRONGER;
	gpio_init_struct.gpio_out_type  = GPIO_OUTPUT_PUSH_PULL;
	gpio_init_struct.gpio_mode = GPIO_MODE_MUX;
	gpio_init_struct.gpio_pins = GPIO_PINS_9;
	gpio_init_struct.gpio_pull = GPIO_PULL_NONE;
	gpio_init(GPIOA, &gpio_init_struct);
	/* 初始化接收GPIO */
	gpio_init_struct.gpio_mode = GPIO_MODE_INPUT;									//输入模式
	gpio_init_struct.gpio_pins = GPIO_PINS_10;
	gpio_init_struct.gpio_pull = GPIO_PULL_UP;										//上拉
	gpio_init(GPIOA, &gpio_init_struct);

	nvic_irq_enable(USART1_IRQn, 2, 0);
	
	/* 初始串口1 */
	usart_init(USART1, bound, USART_DATA_8BITS, USART_STOP_1_BIT);

	/* 开启中断 */
	usart_transmitter_enable(USART1, TRUE);
	usart_receiver_enable(USART1, TRUE);

	/* 开启相应中断 */
	usart_interrupt_enable(USART1, USART_IDLE_INT, TRUE);//空闲中断
    usart_interrupt_enable(USART1, USART_RDBF_INT, TRUE);//接收中断

	/* enable usart1 */
	usart_enable(USART1, TRUE);
}

u8 DMA_RX1=1;
extern int dma_data_rx_p1;
extern int dma_data_rx_len1;
void USART1_IRQHandler(void)                	//串口1中断服务程序
{
	u8 Res;
    if(usart_flag_get(USART1, USART_IDLEF_FLAG) != RESET)//空闲中断
    {
        DMA_RX1=1;//数据接收完成，标记为空闲
        if(dma_data_rx_p1>=0)
        {
            dma_data_rx_p1+=dma_data_rx_len1;
            if(dma_data_rx_p1>=DMA_BUF_SIZE)dma_data_rx_p1-=DMA_BUF_SIZE;
            dma_data_rx_len1=DMA_BUF_SIZE-dma_data_number_get(DMA2_CHANNEL1)-dma_data_rx_p1;
            if(dma_data_rx_len1<=0)dma_data_rx_len1+=DMA_BUF_SIZE;
        }
        usart_flag_clear(USART1, USART_IDLEF_FLAG);
    }
	if(usart_flag_get(USART1, USART_RDBF_FLAG) != RESET)  //接收中断(接收到的数据必须是0x0d 0x0a结尾)
	{
		Res =usart_data_receive(USART1);	//读取接收到的数据
		
		if((USART_RX_STA&0x8000)==0)//接收未完成
		{
			if(USART_RX_STA&0x4000)//接收到了0x0d
			{
				if(Res!=0x0a)USART_RX_STA=0;//接收错误,重新开始
				else USART_RX_STA|=0x8000;	//接收完成了 
			}
			else //还没收到0X0D
			{	
				if(Res==0x0d)USART_RX_STA|=0x4000;
				else
				{
					USART_RX_BUF[USART_RX_STA&0X3FFF]=Res ;
					USART_RX_STA++;
					if(USART_RX_STA>(USART_REC_LEN-1))USART_RX_STA=0;//接收数据错误,重新开始接收	  
				}		 
			}
		}   		 
	} 
}
